# nexus

./: .gitignore  AGENTS.md  ARCHITECT.md  ARCHTECT.md  CLAUDE.md  INDEX.md  SPEC.md  WORKFLOWS.md  readme.md  shared-project-convensions.md
nexus-api/: README.md  pyproject.toml
nexus-api/nexus_api/: __init__.py  auth.py  errors.py  logging.py  main.py  middleware.py  permissions.py  query_router_v2_deps.py  query_router_v2_sse.py  responses.py  schemas.py  trace.py
nexus-api/tests/: conftest.py  test_a1b_job_demand_records.py  test_a1f_by_major_endpoint.py  test_ai_governance_api.py  test_api_callers_lifecycle.py  test_asset_catalog_api.py  test_auth_endpoints.py  test_b0_ability_analyses_include.py  test_b0_role_graph_cross_dataset.py  test_b4_job_demand_api.py  test_b6_ability_analysis_api.py  test_b8_capability_graph_staging_api.py  test_contract_enums.py  test_data_sources_delete.py  test_evidence_graph_api.py  test_health.py  test_internal_chunk_preview.py  test_jobs_actions.py  test_knowledge_outline_api.py  test_knowledge_outline_review_api.py  test_knowledge_retrieval_api.py  test_lineage_endpoints.py  test_major_distribution_api.py  test_major_profile_api.py  test_master_data_api.py  test_multi_raw_batch_api.py  test_query_router_v2_endpoints.py  test_query_router_v2_stream_endpoints.py  test_search_qa_audit.py  test_search_qa_outline_fusion.py  test_task_outline_api.py  test_week2_api.py
nexus-app/: README.md  alembic.ini  pyproject.toml
nexus-app/alembic/: env.py
nexus-app/config/: dim_tag_alias_seed_v0.json
nexus-app/nexus_app/: __init__.py  audit.py  audit_v2_retrieval.py  auth_service.py  config.py  database.py  enums.py  image_analysis.py  mineru.py  models.py  pipeline.py  schemas.py  services.py  storage.py
nexus-app/scripts/: __init__.py  audit_seed_migrations.py  backfill_governance_tags.py  backfill_indexing_for_assets.py  backfill_normalized_summary.py  backfill_outline_projection.py  backfill_pipeline_b_tag_projections.py  backfill_tag_embeddings.py  backfill_teaching_standard_graph.py  e2e_ingest_real_samples.py  e2e_ingest_validate.py  e2e_readiness_check.py  evaluate_retrieval_golden.py  evaluate_retrieval_recall.py  evaluate_tagging_v2_golden.py  knowledge_outline_detector_check.py  rebuild_knowledge_outline_for_ref.py  rebuild_knowledge_outline_llm_v1.py  rebuild_major_profile_for_ref.py  rebuild_nexus_chunks_for_ref.py  recompute_tagging.py  repair_governance_consistency.py  run_retrieval_golden.py  seed_dim_tag_alias.py
nexus-app/tests/: conftest.py  test_audit_v2_retrieval.py  test_b4_job_demand_e2e.py  test_b4_job_demand_fingerprint.py  test_b4_job_demand_writer.py  test_b5_ai_analysis_rules.py  test_b5_body_markdown.py  test_b5_knowledge_extraction.py  test_b5_task_structuring.py  test_b6_ability_analysis.py  test_b7_ability_governance.py  test_b7_persistence.py  test_b8_capability_graph.py  test_config_env.py  test_contract_enums.py  test_data_source_l1_l2.py  test_major_profile.py  (+25 more)
(+1068 files in other folders)
