[project]
name = "nexus-api"
version = "0.1.0"
description = "NEXUS externally consumed business API service"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "nexus-app",
  "pydantic>=2.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.30.0",
]

[tool.uv.sources]
nexus-app = { path = "../nexus-app", editable = true }

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../nexus-app"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
