[project]
name = "nexus-app"
version = "0.1.0"
description = "NEXUS core application and domain services"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13.0",
  "boto3>=1.34.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["nexus_app*"]
