[project]
name = "nexus-app"
version = "0.1.0"
description = "NEXUS core application and domain services"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt>=4.0.0",
  "boto3>=1.34.0",
  "openpyxl>=3.1.0",
  "pyjwt>=2.9.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.28.1",
  "openai>=2.41.1",
  # PDF page rasteriser used by mineru_converter to rescue tables whose
  # cells MinerU pipeline-mode failed to extract (cross-page tables in
  # particular). MIT-licensed wrapper around PDFium with no system deps.
  "pypdfium2>=4.30.0",
  # Required by pypdfium2.PdfBitmap.to_pil for JPEG encoding the rendered
  # pages before they are sent to the VLM.
  "pillow>=10.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["nexus_app*"]
